# cs3223

./: A0097582.docx  CMakeLists.txt  README.txt
assign1/: Makefile  b-clock.txt  b-lru.txt  b-lru2.txt  b2-clock.txt  b2-lru.txt  b2-lru2.txt  b3-clock.txt  b3-lru.txt  b3-lru2.txt  bench-clock.txt  bench-lru.txt  bench-lru2.txt  benchl-clock.txt  benchl-lru.txt  benchl-lru2.txt  benchmark-all.sh  benchmark-l.sh  benchmarks-clock.txt  benchmarks-lru.txt  benchmarks-lru2.txt  bufmgr.c  clock-2.txt  clock-3.txt  clock-new.txt  clock-new2.txt  clock-new3.txt  clock-org.txt  comparetest.sh  freelist-lru-fail.c  freelist-lru-wh.c  freelist-lru-zx.c  freelist-lru.c  freelist-lru2-old.c  freelist-lru2-wh.c  freelist-lru2-zx.c  log2.txt  lru-new.txt  lru-new2.txt  lru-new3.txt  (+6 more)
assign1 2/: freelist-lru.c  freelist-lru2.c  setup.sh
assign1/benchmarks/: benchmarks-clock.txt  benchmarks-lru.txt  benchmarks-lru2.txt
assign1/testresults/: result-0.txt  result-1.txt  result-2.txt  result-3.txt  result-4.txt  result-5.txt  result-6.txt  result-7.txt  result-8.txt  result-9.txt
assign2/: solution-a0110781n.txt  wh_output_script  wh_output_script.txt  wh_results_mac.rtf
assign2/scripts/: q1-bis-b.sql  q1-is-b.sql  q2-bis-cb.sql  q2-is-cb.sql  q3-bis-c.sql  q3-ios-cb.sql  q3-is-c.sql  q4-abis-cb.sql  q4-bis-cb.sql  q5-bis-cb.sql  q5-is-b.sql  q6-bis-b.sql  q6-bis-c.sql  q6-bis-cb.sql  q6-is-b.sql  q6-is-c.sql  q6-is-cb.sql  q6-seqscan.sql  run.sh
assign3/: wh_answer.txt
assign3/cluster-result/: 1A.txt  1C.txt  2B.txt  2C.txt  3A.txt  3C.txt  extractor.py
assign3/scripts/: 1A.sh  (+15 more)
(+23 files in other folders)
